--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
 					<ul class="actions uniform">
 						<li><a href="#" class="button special">Sign Up</a></li>
 					</ul>
-					<ul class="icons">
-						<li><a href="https://github.com/travelingpiano/Flex-Project" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+					<iframe src="https://appetize.io/embed/ey91k6e0k6a6tfma2xygxc77gg?device=iphone6&scale=100&autoplay=false&orientation=portrait&deviceColor=white" width="416px" height="870px" frameborder="0" scrolling="no"></iframe>
+
 				</div>
 			</section>
 
